--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ click==8.1.3
 colorama==0.4.6
 dnspython==2.3.0
 email-validator==2.0.0.post2
-Flask==2.3.2
+Flask==2.2.2
 Flask-Cors==3.0.10
 Flask-Login==0.6.2
 flask-marshmallow==0.15.0
@@ -19,6 +19,7 @@ Jinja2==3.1.2
 Mako==1.2.4
 MarkupSafe==2.1.2
 marshmallow==3.19.0
+marshmallow-sqlalchemy==0.29.0
 packaging==23.1
 psycopg2-binary==2.9.6
 python-dateutil==2.8.2
@@ -28,4 +29,3 @@ SQLAlchemy==2.0.15
 typing_extensions==4.5.0
 Werkzeug==2.3.4
 WTForms==3.0.1
-
