--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ marshmallow-sqlalchemy==0.29.0
 packaging==23.1
 psycopg2-binary==2.9.6
 python-dateutil==2.8.2
-python-dotenv==
+python-dotenv==1.0.0
 six==1.16.0
 SQLAlchemy==2.0.15
 typing_extensions==4.5.0
